round prompt numbers

--- a/main.ipynb
+++ b/main.ipynb
@@ -51,15 +51,15 @@
     "    system_prompt = f'You are evaluating an english description of an autoencoder feature. The description should correspond to setences which result in high activation. The english description of the feature is: \"{explanation}\"\\n'\n",
     "\n",
     "    if show_examples:\n",
-    "        system_prompt += 'Here are 20 examples of sentences and their corresponding activations:\\n '\n",
+    "        system_prompt += f'Here are {show_examples} examples of sentences and their corresponding activations:\\n '\n",
     "        for sentence in example_sentences:\n",
     "            sentence_string = sentence['sentence_string']\n",
     "            activation = sentence['activation']\n",
-    "            system_prompt += f'Example: \"{sentence_string}\", Activation: {activation}\\n'\n",
+    "            system_prompt += f'Example: \"{sentence_string}\", Activation: {activation:.2f}\\n'\n",
     "        system_prompt += 'Use the provided samples and the provided description to predict the activation on a new sentence.'\n",
     "\n",
     "    else:\n",
-    "        system_prompt += f'The value of the highest activation on the dataset is {highest_activation}. You must predict the activation on a new sentence based off of the provided description – if the description matches the provided sentence, the activation may be closer to {highest_activation}, while if it does not match the activation will be nearly 0.'\n",
+    "        system_prompt += f'The value of the highest activation on the dataset is {highest_activation:.2f}. You must predict the activation on a new sentence based off of the provided description – if the description matches the provided sentence, the activation may be closer to {highest_activation:.2f}, while if it does not match the activation will be nearly 0.'\n",
     "\n",
     "    system_prompt += '\\nYou MUST respond with ONLY a number and NO OTHER content.'\n",
     "\n",
@@ -68,7 +68,7 @@
     "    # Have the model predict activations on each test sentence\n",
     "    for sentence in test_sentences:\n",
     "        sentence_string = sentence['sentence_string']\n",
-    "        user_message = f'Please predict the activation on this sentence, responding with a number between 0 and {highest_activation}.\\n\\nSentence: \"{sentence_string}\"'\n",
+    "        user_message = f'Please predict the activation on this sentence, responding with a number between 0 and {highest_activation:.2f}.\\n\\nSentence: \"{sentence_string}\"'\n",
     "\n",
     "        completion = client.chat.completions.create(\n",
     "            model=\"gpt-3.5-turbo\",\n",
