modularized get predictions

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'prediction_analysis'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrandom\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mprediction_analysis\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgetting_examples\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_activation_data_for_feature\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mconcurrent\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfutures\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'prediction_analysis'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "from getting_examples import get_activation_data_for_feature\n",
@@ -25,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,62 +21,67 @@
     "from openai import OpenAI\n",
     "import re\n",
     "import pprint\n",
-    "from getting_examples import get_activation_data_for_feature\n",
+    "from getting_examples import get_pos_neg_examples\n",
     "\n",
     "def find_first_number(text):\n",
     "    # Return the first number in a string\n",
     "    match = re.search(r'\\b\\d+(\\.\\d+)?', text)\n",
     "    return float(match.group(0)) if match else None\n",
     "\n",
+    "def find_first_high_or_low(text):\n",
+    "    # Search for the strings \"high\" and \"low\" and return whichever occurs first\n",
+    "    match = re.search(r'\\b(high|low)\\b', text, flags=re.IGNORECASE)\n",
+    "    return match.group(0).lower() if match else None\n",
+    "\n",
     "client = OpenAI()\n",
     "\n",
-    "def predict_activations(feature_index, test_number=20, show_examples=0):\n",
-    "    # Get and parse JSON data from the url corresponding to the requested feature\n",
-    "    url = f\"https://www.neuronpedia.org/api/feature/gpt2-small/9-res-jb/{feature_index}\"\n",
-    "    data = get_activation_data_for_feature(url)\n",
-    "    explanation = data['explanations'][0]['description']\n",
+    "def predict_activations(feature_index, test_pos=20, test_neg=20, show_pos=0, show_neg=0, binary_class=True, neg_type='self', show_max_token=False):\n",
+    "    # Get positive and negative examples of the feature activation\n",
+    "    num_pos = test_pos + show_pos\n",
+    "    num_neg = test_neg + show_neg\n",
+    "    description, pos_examples, neg_examples, highest_activation = get_pos_neg_examples(feature_index, num_pos=num_pos, num_neg=num_neg, neg_type=neg_type)\n",
     "\n",
-    "    assert (len(data['examples']) >= (test_number + show_examples))\n",
+    "    if binary_class:\n",
+    "        for sentence in pos_examples:\n",
+    "            sentence['max_value'] = 'high'\n",
+    "        for sentence in neg_examples:\n",
+    "            sentence['max_value'] = 'low'\n",
     "\n",
-    "    # Randomly select some sentences to use as examples and test data\n",
-    "    random_indices = np.random.choice(len(data['examples']), size=test_number + show_examples, replace=False)\n",
-    "    sentences = [\n",
-    "        {\n",
-    "            'sentence_string': ''.join(data['examples'][i]['tokens']), \n",
-    "            'activation':  data['examples'][i]['maxValue'], \n",
-    "            'max_index': data['examples'][i]['maxValueTokenIndex'],\n",
-    "            'max_token': data['examples'][i]['tokens'][data['examples'][i]['maxValueTokenIndex']]\n",
-    "         } \n",
-    "        for i in random_indices]\n",
-    "    example_sentences = sentences[:show_examples]\n",
-    "    test_sentences = sentences[show_examples:] \n",
-    "\n",
-    "    highest_activation = data['examples'][0]['maxValue']\n",
+    "    test_sentences = pos_examples[:test_pos] + neg_examples[:test_neg]\n",
+    "    show_sentences = pos_examples[test_pos:] + neg_examples[test_neg:]\n",
     "\n",
     "    # Create a system prompt dependning on how many example sentences are provided\n",
-    "    # system_prompt = f'You are evaluating an english description of an autoencoder feature. The description should correspond to sentences which result in high activation. The english description of the feature is: \"{explanation}\"\\n'\n",
-    "    system_prompt = f'You are evaluating an english description of an autoencoder feature. The description should correspond to sentences which result in high activation. The english description of the feature is: \"{explanation}\"\\n'\n",
+    "    system_prompt = f'You are evaluating an english description of an autoencoder feature. The description should correspond to sentences which result in high activation. The english description of the feature is: \"{description}\"\\n'\n",
     "\n",
-    "    if show_examples:\n",
-    "        system_prompt += f'Here are {show_examples} examples of sentences and their corresponding activations:\\n '\n",
-    "        for sentence in example_sentences:\n",
+    "    if show_pos or show_neg:\n",
+    "        system_prompt += f'Here are {show_pos + show_neg} examples of sentences and their corresponding activations:\\n '\n",
+    "        for sentence in show_sentences:\n",
     "            sentence_string = sentence['sentence_string']\n",
-    "            activation = sentence['activation']\n",
-    "            system_prompt += f'Example: \"{sentence_string}\" had an activation of {activation:.2f} on token \"{sentence[\"max_token\"]}\"\\n'\n",
-    "        system_prompt += 'Use the provided samples and the provided description to predict the activation on a new sentence.'\n",
+    "            activation = sentence['max_value']\n",
+    "            if not binary_class:\n",
+    "                activation = round(sentence['max_value'], 2)\n",
+    "            system_prompt += f'Example: \"{sentence_string}\", Activation: {activation}'\n",
+    "            if show_max_token:\n",
+    "                system_prompt += f', Token with highest activation: \"{sentence['max_token']}\" at position {sentence['max_value_token_index']}'\n",
+    "            system_prompt += '\\n'\n",
     "\n",
+    "    if binary_class:\n",
+    "        system_prompt += f'\\nYou must predict the activation on a new sentence based off of the provided description. If the description matches the provided sentence, the activation will be high, while if it does not match the activation will low. \\nYou MUST respond with either \"high\" or \"low\" and NO OTHER content.'\n",
     "    else:\n",
-    "        system_prompt += f'The value of the highest activation on the dataset is {highest_activation:.2f}. You must predict the activation on a new sentence based off of the provided description. If the description matches the provided sentence, the activation may be closer to {highest_activation:.2f}, while if it does not match the activation will be nearly 0.'\n",
-    "\n",
-    "    system_prompt += '\\nYou MUST respond with ONLY a number and NO OTHER content.'\n",
+    "        system_prompt += f'\\nThe value of the highest activation on the dataset is {highest_activation:.2f}. You must predict the activation on a new sentence based off of the provided description. If the description matches the provided sentence, the activation may be closer to {highest_activation:.2f}, while if it does not match the activation will be nearly 0. \\nYou MUST respond with ONLY a number and NO OTHER content.'\n",
     "\n",
     "    predictions = []\n",
     "\n",
     "    # Have the model predict activations on each test sentence\n",
     "    for sentence in test_sentences:\n",
     "        sentence_string = sentence['sentence_string']\n",
-    "        user_message = f'Please predict the activation on this sentence, responding with a number between 0 and {highest_activation:.2f}.\\n\\nSentence: \"{sentence_string}\" Remember, the english description of the feature is: \"{explanation}\" and the most common words that resulted in a high activation were {\", \".join([\"\\\"\" + s[\"max_token\"] + \"\\\"\" for s in example_sentences])}'\n",
-    "        print(user_message)\n",
+    "        user_message = f'Please predict the activation on this sentence,'\n",
+    "        if binary_class:\n",
+    "            user_message += f'responding with either \"high\" or \"low\".'\n",
+    "        else:\n",
+    "            user_message += f'responding with a number between 0 and {highest_activation:.2f}.'\n",
+    "        user_message += f'\\n\\nSentence: \"{sentence_string}\" \\nRemember, the english description of the feature is: \"{explanation}\"'\n",
+    "       \n",
     "        completion = client.chat.completions.create(\n",
     "            model=\"gpt-3.5-turbo\",\n",
     "            messages=[\n",
@@ -96,19 +89,17 @@
     "                {\"role\": \"user\", \"content\": user_message}\n",
     "            ]\n",
     "        )\n",
-    "        \n",
-    "        predicted = find_first_number(completion.choices[0].message.content)\n",
-    "        # (true, pred)\n",
-    "        predictions.append((sentence['activation'], predicted))\n",
+    "\n",
+    "        response = completion.choices[0].message.content\n",
+    "        predicted = find_first_high_or_low(response) if binary_class else find_first_number(response)\n",
+    "        predictions.append((sentence['max_value'], predicted))\n",
+    "\n",
+    "        print(sentence_string, predicted)\n",
     "\n",
     "    pprint.pprint(system_prompt)\n",
-    "    # pprint.pprint(test_sentences)\n",
+    "    pprint.pprint(user_message)\n",
     "\n",
-    "    for i in range(len(predictions)):\n",
-    "        print(predictions[i], test_sentences[i]['sentence_string'])\n",
-    "\n",
-    "    return predictions\n",
-    "\n"
+    "    return predictions"
    ]
   },
   {
