--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,6 +72,8 @@
     "\n",
     "    predictions = []\n",
     "\n",
+    "    print(system_prompt)\n",
+    "\n",
     "    # Have the model predict activations on each test sentence\n",
     "    for sentence in test_sentences:\n",
     "        sentence_string = sentence['sentence_string']\n",
@@ -80,7 +82,7 @@
     "            user_message += f'responding with either \"high\" or \"low\".'\n",
     "        else:\n",
     "            user_message += f'responding with a number between 0 and {highest_activation:.2f}.'\n",
-    "        user_message += f'\\n\\nSentence: \"{sentence_string}\" \\nRemember, the english description of the feature is: \"{explanation}\"'\n",
+    "        user_message += f'\\nSentence: \"{sentence_string}\" \\nRemember, the english description of the feature is: \"{description}\"'\n",
     "       \n",
     "        completion = client.chat.completions.create(\n",
     "            model=\"gpt-3.5-turbo\",\n",
@@ -90,16 +92,98 @@
     "            ]\n",
     "        )\n",
     "\n",
+    "        print(user_message)\n",
+    "\n",
     "        response = completion.choices[0].message.content\n",
     "        predicted = find_first_high_or_low(response) if binary_class else find_first_number(response)\n",
     "        predictions.append((sentence['max_value'], predicted))\n",
     "\n",
-    "        print(sentence_string, predicted)\n",
-    "\n",
-    "    pprint.pprint(system_prompt)\n",
-    "    pprint.pprint(user_message)\n",
+    "        print(sentence['max_value'], predicted)\n",
     "\n",
     "    return predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are evaluating an english description of an autoencoder feature. The description should correspond to sentences which result in high activation. The english description of the feature is: \"phrases related to Q&A sessions or dialogues involving opinions and discussions\"\n",
+      "Here are 3 examples of sentences and their corresponding activations:\n",
+      " Example: \" control over your life and whatever negative thoughts and words attack you brush them off because you\", Activation: 20.81\n",
+      "Example: \" to the world. In the dynamic call and response of God and the world, God\", Activation: 20.36\n",
+      "Example: \" see the world and sometimes affect the words and phrases I use as a part of casual\", Activation: 20.2\n",
+      "\n",
+      "The value of the highest activation on the dataset is 24.83. You must predict the activation on a new sentence based off of the provided description. If the description matches the provided sentence, the activation may be closer to 24.83, while if it does not match the activation will be nearly 0. \n",
+      "You MUST respond with ONLY a number and NO OTHER content.\n",
+      "Please predict the activation on this sentence,responding with a number between 0 and 24.83.\n",
+      "Sentence: \"Ĵs community.ĊĊThe thoughts and opinions expressed are those of the writer and\" \n",
+      "Remember, the english description of the feature is: \"phrases related to Q&A sessions or dialogues involving opinions and discussions\"\n",
+      "24.82564735412598 1.94\n",
+      "Please predict the activation on this sentence,responding with a number between 0 and 24.83.\n",
+      "Sentence: \" the room, came during a question-and-answer session with the Retired American\" \n",
+      "Remember, the english description of the feature is: \"phrases related to Q&A sessions or dialogues involving opinions and discussions\"\n",
+      "23.26255035400391 23.42\n",
+      "Please predict the activation on this sentence,responding with a number between 0 and 24.83.\n",
+      "Sentence: \" room, came during a question-and-answer session with the Retired American Warriors\" \n",
+      "Remember, the english description of the feature is: \"phrases related to Q&A sessions or dialogues involving opinions and discussions\"\n",
+      "23.26255035400391 17.92\n",
+      "Please predict the activation on this sentence,responding with a number between 0 and 24.83.\n",
+      "Sentence: \"89, led an onstage question-and-answer session with Lazar, who discussed\" \n",
+      "Remember, the english description of the feature is: \"phrases related to Q&A sessions or dialogues involving opinions and discussions\"\n",
+      "23.04417991638184 2.36\n",
+      "Please predict the activation on this sentence,responding with a number between 0 and 24.83.\n",
+      "Sentence: \" '89, led an onstage question-and-answer session with Lazar, who\" \n",
+      "Remember, the english description of the feature is: \"phrases related to Q&A sessions or dialogues involving opinions and discussions\"\n",
+      "23.04417991638184 1.32\n",
+      "Please predict the activation on this sentence,responding with a number between 0 and 24.83.\n",
+      "Sentence: \"key said Monday during a question-and-answer panel during the Associated Press Sports Editors\" \n",
+      "Remember, the english description of the feature is: \"phrases related to Q&A sessions or dialogues involving opinions and discussions\"\n",
+      "22.46113586425781 2.15\n",
+      "Please predict the activation on this sentence,responding with a number between 0 and 24.83.\n",
+      "Sentence: \" Sankey said Monday during a question-and-answer panel during the Associated Press Sports\" \n",
+      "Remember, the english description of the feature is: \"phrases related to Q&A sessions or dialogues involving opinions and discussions\"\n",
+      "22.46113586425781 2.15\n",
+      "Please predict the activation on this sentence,responding with a number between 0 and 24.83.\n",
+      "Sentence: \" weeks. In a Facebook Live question-and-answer session hosted by Trump surrogate Newt\" \n",
+      "Remember, the english description of the feature is: \"phrases related to Q&A sessions or dialogues involving opinions and discussions\"\n",
+      "22.11185836791992 17.92\n",
+      "Please predict the activation on this sentence,responding with a number between 0 and 24.83.\n",
+      "Sentence: \". In a Facebook Live question-and-answer session hosted by Trump surrogate Newt Gingrich\" \n",
+      "Remember, the english description of the feature is: \"phrases related to Q&A sessions or dialogues involving opinions and discussions\"\n",
+      "22.11185836791992 23.58\n",
+      "Please predict the activation on this sentence,responding with a number between 0 and 24.83.\n",
+      "Sentence: \" we're ready to start receiving your questions and look forward to your feedback. Help us\" \n",
+      "Remember, the english description of the feature is: \"phrases related to Q&A sessions or dialogues involving opinions and discussions\"\n",
+      "20.99689102172852 24.5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(24.82564735412598, 1.94),\n",
+       " (23.26255035400391, 23.42),\n",
+       " (23.26255035400391, 17.92),\n",
+       " (23.04417991638184, 2.36),\n",
+       " (23.04417991638184, 1.32),\n",
+       " (22.46113586425781, 2.15),\n",
+       " (22.46113586425781, 2.15),\n",
+       " (22.11185836791992, 17.92),\n",
+       " (22.11185836791992, 23.58),\n",
+       " (20.99689102172852, 24.5)]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict_activations(0, test_pos=10, test_neg=0, show_pos=3, binary_class=False)"
    ]
   },
   {
