--- a/main.ipynb
+++ b/main.ipynb
@@ -2,33 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'get_activation_data_for_feature' from 'getting_examples' (/Users/adamkaufman/Documents/GitHub/feature_benchmark/getting_examples.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrandom\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgetting_examples\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_activation_data_for_feature\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mconcurrent\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfutures\u001b[39;00m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'get_activation_data_for_feature' from 'getting_examples' (/Users/adamkaufman/Documents/GitHub/feature_benchmark/getting_examples.py)"
-     ]
-    }
-   ],
-   "source": [
-    "import random\n",
-    "from getting_examples import get_activation_data_for_feature\n",
-    "import concurrent.futures"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
+    "import concurrent.futures\n",
     "import numpy as np\n",
     "from openai import OpenAI\n",
     "import re\n",
@@ -50,7 +29,7 @@
     "\n",
     "client = OpenAI()\n",
     "\n",
-    "def predict_activations(feature_index, test_pos=20, test_neg=20, show_pos=0, show_neg=0, binary_class=True, neg_type='self', show_max_token=False, num_completions=1):\n",
+    "def predict_activations(feature_index, test_pos=20, test_neg=20, show_pos=0, show_neg=0, binary_class=True, neg_type='others', show_max_token=False, num_completions=1, debug=False):\n",
     "    # Get positive and negative examples of the feature activation\n",
     "    num_pos = test_pos + show_pos\n",
     "    num_neg = test_neg + show_neg\n",
@@ -87,7 +66,8 @@
     "\n",
     "    predictions = []\n",
     "\n",
-    "    # print(system_prompt)\n",
+    "    if debug:\n",
+    "        print(system_prompt)\n",
     "\n",
     "    # Have the model predict activations on each test sentence\n",
     "    for sentence in test_sentences:\n",
@@ -108,8 +88,9 @@
     "            n=num_completions,\n",
     "            max_tokens=2 if binary_class else 5\n",
     "        )\n",
-    "\n",
-    "        # print(user_message)\n",
+    "        \n",
+    "        if debug:\n",
+    "            print(sentence_string)\n",
     "\n",
     "        prediction = 0\n",
     "        for i in range(num_completions):\n",
@@ -121,38 +102,76 @@
     "            true = 1 if sentence['max_value'] == 'high' else 0\n",
     "        predictions.append((true, prediction))\n",
     "\n",
-    "        # print(true, prediction)\n",
+    "        if debug:\n",
+    "            print(true, prediction)\n",
     "\n",
     "    return predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are evaluating an english description of an autoencoder feature. The description should correspond to sentences which result in high activation. The english description of the feature is: \"phrases related to Q&A sessions or dialogues involving opinions and discussions\"\n",
+      "Here are 6 examples of sentences and their corresponding activations:\n",
+      "Example: \" Sankey said Monday during a question-and-answer panel during the Associated Press Sports\", Activation: 22.46\n",
+      "Example: \" the room, came during a question-and-answer session with the Retired American\", Activation: 23.26\n",
+      "Example: \" room, came during a question-and-answer session with the Retired American Warriors\", Activation: 23.26\n",
+      "Example: \" reporting from the Week, this post originally stated that Mark Steyn had been dropped by\", Activation: 0\n",
+      "Example: \": An earlier version of this story incorrectly stated that the grand jury that indicted Bishop Finn\", Activation: 0\n",
+      "Example: \" lord, did the Blessed One not answer when asked a question by Vacchagotta\", Activation: 0\n",
+      "\n",
+      "The value of the highest activation on the dataset is 24.83. You must predict the activation on a new sentence based off of the provided description. If the description matches the provided sentence, the activation may be closer to 24.83, while if it does not match the activation will be nearly 0. \n",
+      "You MUST respond with ONLY a number and NO OTHER content.\n",
+      "Ĵs community.ĊĊThe thoughts and opinions expressed are those of the writer and\n",
+      "24.82564735412598 0.0\n",
+      "89, led an onstage question-and-answer session with Lazar, who discussed\n",
+      "23.04417991638184 24.83\n",
+      " '89, led an onstage question-and-answer session with Lazar, who\n",
+      "23.04417991638184 23.65\n",
+      "key said Monday during a question-and-answer panel during the Associated Press Sports Editors\n",
+      "22.46113586425781 23.6\n",
+      " weeks. In a Facebook Live question-and-answer session hosted by Trump surrogate Newt\n",
+      "22.11185836791992 23.65\n",
+      " following Lake Zurich. There is no official date, but the company is on target to\n",
+      "0 0.0\n",
+      " by a lawyer at the CIA who himself features heavily in the alleged interrogation abuses. The\n",
+      "0 0.0\n",
+      " to block the 4S's \"killer feature.\"ĊĊThe crack comes courtesy Steve\n",
+      "0 0.0\n",
+      ", R&B, jazz and rock, including performances from rock band The Pin-\n",
+      "0 0.0\n",
+      "TV: âĢľThe original affidavit did say that A, B, C, D\n",
+      "0 0.0\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[(1, 0.0),\n",
-       " (1, 0.0),\n",
-       " (1, 1.0),\n",
-       " (1, 1.0),\n",
-       " (1, 1.0),\n",
-       " (1, 1.0),\n",
-       " (1, 1.0),\n",
-       " (1, 1.0),\n",
-       " (1, 1.0),\n",
-       " (1, 1.0)]"
+       "[(24.82564735412598, 0.0),\n",
+       " (23.04417991638184, 24.83),\n",
+       " (23.04417991638184, 23.65),\n",
+       " (22.46113586425781, 23.6),\n",
+       " (22.11185836791992, 23.65),\n",
+       " (0, 0.0),\n",
+       " (0, 0.0),\n",
+       " (0, 0.0),\n",
+       " (0, 0.0),\n",
+       " (0, 0.0)]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predict_activations(0, test_pos=10, test_neg=0, show_pos=3, binary_class=True, num_completions=1)"
+    "predict_activations(0, test_pos=5, test_neg=5, show_pos=3, show_neg=3, binary_class=False, num_completions=1, debug=False)"
    ]
   },
   {
