Update running code to work with new functions and in parallel

--- a/main.ipynb
+++ b/main.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import random\n",
     "import concurrent.futures\n",
+    "from multiprocessing import Pool\n",
     "import numpy as np\n",
     "from openai import OpenAI\n",
     "import re\n",
@@ -105,7 +106,22 @@
     "        if debug:\n",
     "            print(true, prediction)\n",
     "\n",
-    "    return predictions"
+    "    return predictions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_experiments(feature_indices, test_pos=20, test_neg=20, show_pos=0, show_neg=0, binary_class=True, neg_type='others', show_max_token=False, num_completions=1, debug=False, randomize_pos=True):\n",
+    "\n",
+    "    with Pool() as pool:\n",
+    "        results = pool.map(lambda feature_index: predict_activations(feature_index, test_pos=test_pos, test_neg=test_neg, show_pos=show_pos, show_neg=show_neg, binary_class=binary_class, neg_type=neg_type, show_max_token=show_max_token, num_completions=num_completions, debug=debug, randomize_pos=randomize_pos), feature_indices)\n",
+    "\n",
+    "    return results\n",
+    "\n"
    ]
   },
   {
