--- a/main.ipynb
+++ b/main.ipynb
@@ -30,11 +30,11 @@
     "\n",
     "client = OpenAI()\n",
     "\n",
-    "def predict_activations(feature_index, test_pos=20, test_neg=20, show_pos=0, show_neg=0, binary_class=True, neg_type='others', show_max_token=False, num_completions=1, debug=False, randomize_pos=True):\n",
+    "def predict_activations(feature_index, test_pos=20, test_neg=20, show_pos=0, show_neg=0, binary_class=True, neg_type='others', show_max_token=False, num_completions=1, debug=False, randomize_pos=True, seed=42):\n",
     "    # Get positive and negative examples of the feature activation\n",
     "    num_pos = test_pos + show_pos\n",
     "    num_neg = test_neg + show_neg\n",
-    "    description, pos_examples, neg_examples, highest_activation = get_pos_neg_examples(feature_index, num_pos=num_pos, num_neg=num_neg, neg_type=neg_type, randomize_pos_examples=randomize_pos)\n",
+    "    description, pos_examples, neg_examples, highest_activation = get_pos_neg_examples(feature_index, num_pos=num_pos, num_neg=num_neg, neg_type=neg_type, randomize_pos_examples=randomize_pos, seed=seed)\n",
     "\n",
     "    if binary_class:\n",
     "        for sentence in pos_examples:\n",
@@ -115,10 +115,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_experiments(feature_indices, test_pos=20, test_neg=20, show_pos=0, show_neg=0, binary_class=True, neg_type='others', show_max_token=False, num_completions=1, debug=False, randomize_pos=True):\n",
+    "def run_experiments(num_features, test_pos=20, test_neg=20, show_pos=0, show_neg=0, binary_class=True, neg_type='others', show_max_token=False, num_completions=1, debug=False, randomize_pos=True, seed=42):\n",
+    "\n",
+    "    np.random.seed(seed)\n",
+    "    feature_indices = np.random.choice(24000, num_features, replace=False)\n",
     "\n",
     "    with Pool() as pool:\n",
-    "        results = pool.map(lambda feature_index: predict_activations(feature_index, test_pos=test_pos, test_neg=test_neg, show_pos=show_pos, show_neg=show_neg, binary_class=binary_class, neg_type=neg_type, show_max_token=show_max_token, num_completions=num_completions, debug=debug, randomize_pos=randomize_pos), feature_indices)\n",
+    "        results = pool.map(lambda feature_index: predict_activations(feature_index, test_pos=test_pos, test_neg=test_neg, show_pos=show_pos, show_neg=show_neg, binary_class=binary_class, neg_type=neg_type, show_max_token=show_max_token, num_completions=num_completions, debug=debug, randomize_pos=randomize_pos, seed=seed), feature_indices)\n",
     "\n",
     "    return results\n",
     "\n"
