wrote run_experiments docstring

--- a/main.ipynb
+++ b/main.ipynb
@@ -302,14 +302,17 @@
    "source": [
     "results = run_experiments(\n",
     "    num_features=1, \n",
-    "    test_pos=3, \n",
-    "    test_neg=3, \n",
-    "    show_pos=0, \n",
-    "    show_neg=0, \n",
-    "    num_completions=1, \n",
+    "    test_pos=3, # Experiment with\n",
+    "    test_neg=3, # Experiment with\n",
+    "    show_pos=0, # Experiment with\n",
+    "    show_neg=0, # Experiment with\n",
+    "    neg_type='others', # Experiment with\n",
+    "    binary_classify=True, # Experiment with\n",
+    "    show_max_token=True, # Experiment with\n",
+    "    num_completions=1, # Experiment with\n",
     "    debug=False, \n",
     "    randomize_pos=False, \n",
-    "    seed=42\n",
+    "    seed=42,\n",
     ")\n",
     "\n",
     "# the run_experiments function automatically saves results to results/exp_{timestamp}.json\n",
