--- a/main.ipynb
+++ b/main.ipynb
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get a simpler idea by printing the json tree"
+    "### Get a simpler idea by printing the json tree (or just by opening a results file)"
    ]
   },
   {
@@ -1138,7 +1138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
