no substantial changes, just saving for pull

--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
       "                     'num_completions': 1,\n",
       "                     'randomize_pos': False,\n",
       "                     'seed': 42,\n",
-      "                     'show_max_token': False,\n",
+      "                     'show_max_token': True,\n",
       "                     'show_neg': 0,\n",
       "                     'show_pos': 0,\n",
       "                     'test_neg': 3,\n",
@@ -295,7 +295,7 @@
       "                                             0,\n",
       "                                             0,\n",
       "                                             0]}]}],\n",
-      " 'timestamp': 1715324970.546821}\n"
+      " 'timestamp': 1715370992.708655}\n"
      ]
     }
    ],
@@ -307,7 +307,7 @@
     "    show_pos=0, # Experiment with\n",
     "    show_neg=0, # Experiment with\n",
     "    neg_type='others', # Experiment with\n",
-    "    binary_classify=True, # Experiment with\n",
+    "    binary_class=True, # Experiment with\n",
     "    show_max_token=True, # Experiment with\n",
     "    num_completions=1, # Experiment with\n",
     "    debug=False, \n",
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +670,6 @@
       "            .\n",
       "            .\n",
       "        show_sentences []\n",
-      "            []\n",
       "        highest_activation\n",
       "        }\n",
       "\n",
