updated result names in main.ipynb

--- a/main.ipynb
+++ b/main.ipynb
@@ -88,8 +88,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "json_data_binary = load_json_results('results/binary_test/exp_1715383683.376679.json')\n",
-    "json_data_continuous = load_json_results('results/binary_test/exp_1715384165.641842.json')"
+    "json_data_binary = load_json_results('results/binary_test/exp_binary_others.json')\n",
+    "json_data_continuous = load_json_results('results/binary_test/exp_continuous_others.json')"
    ]
   },
   {
