random comment to practice git

--- a/main.ipynb
+++ b/main.ipynb
@@ -18,7 +18,8 @@
     "from predict_activations import *\n",
     "from utils import *\n",
     "import json\n",
-    "import pprint"
+    "import pprint\n",
+    "# sams comment"
    ]
   },
   {
