Track JSON files with Git LFS

--- a/main.ipynb
+++ b/main.ipynb
@@ -16,18 +16,10 @@
     "from analyze_results import *\n",
     "from getting_examples import *\n",
     "from predict_activations import *\n",
+    "from model_utils import *\n",
     "from utils import *\n",
     "import json\n",
     "import pprint"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "resave_organized_modeldata()"
    ]
   },
   {
